Fix text align for h3 element in gallery.html

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -184,8 +184,9 @@ p a {
 }
 
 #gallery h3 {
-    float: left;
+    float: right;
     padding: 30px;
+    text-align: center;
 }
 
 img {
